# Graph-Query-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: CMakeLists.txt  benchmark.cpp
include/graph/: algorithms.hpp  graph.hpp  parser.hpp  snapshot.hpp  thread_pool.hpp  wal.hpp
src/: CMakeLists.txt  algorithms.cpp  graph.cpp  main.cpp  parser.cpp  snapshot.cpp  thread_pool.cpp  wal.cpp
tests/: CMakeLists.txt  test_main.cpp
